Add bootstrap and step as well as the shell scripts.

--- a/config.yml.example
+++ b/config.yml.example
@@ -1,8 +1,8 @@
 emr:
-  aws_access_key: aws-access-key
-  aws_secret_access_key: aws-secret-access-key
-  region_name: region-name
-  cluster_name: cluster-name
-  instance_count: 2
-  key_name: ec2-key-name
-  log_uri: log-uri-s3
+  aws_access_key: <AWS Access Key>
+  aws_secret_access_key: <AWS Secret Access Key>
+  region_name: <Region Name>
+  cluster_name: <Cluster Name>
+  instance_count: <Number of Instances>
+  key_name: <Ec2 Keyname>
+  log_uri: s3://<Your S3 Location>
